fix(sidebar): fix sidebar height by applying overflow auto

--- a/src/app/components/main-layout/main-layout.component.scss
+++ b/src/app/components/main-layout/main-layout.component.scss
@@ -1,4 +1,4 @@
-.ant-layout {
+.ant-layout-has-sider {
   height: calc(100vh - 64px);
 }
 
