--- a/src/app/components/main-layout/menu/menu.component.scss
+++ b/src/app/components/main-layout/menu/menu.component.scss
@@ -1,3 +1,8 @@
 [nz-menu] {
     width: 100%;
 }
+
+.app-menu {
+    overflow: scroll;
+    height: 100%;
+}
